samples/_failures_safe/1761041937_d74e89_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_16be8950.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_16be8950.c:158:16: error: missing terminating " character
  158 |         printf("%-12
      |                ^~~~~
./samples/SAFE/__tmp_16be8950.c:158:9: error: expected expression at end of input
  158 |         printf("%-12
      |         ^~~~~~
./samples/SAFE/__tmp_16be8950.c:158:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_16be8950.c:158:9: error: expected declaration or statement at end of input
